--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kata-idukay",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kata-idukay-hechicero.yoshualopez.ml",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -19,6 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build && echo https://kata-idukay-hechicero.yoshualopez.ml > ./build/CNAME",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
