--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "enzyme-to-json": "^3.5.0",
+    "gh-pages": "^3.2.3",
     "ts-jest": "^26.3.0"
   }
 }
